<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/registeredconstraint"

    >



  <TextView

      android:id="@+id/registered_textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:text="@string/tv_registered"
      android:textSize="19dp"

      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"


      />


    <LinearLayout

        android:id="@+id/usnamelinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/registered_textView"
        >

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_registeredusearname"
            android:textSize="18sp"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/et_registeredplusearname"
            android:singleLine="true"
            />

    </LinearLayout>



    <LinearLayout

        android:id="@+id/passlinearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/usnamelinear"
        android:layout_marginTop="15dp"


        >

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textSize="18sp"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="160dp"
            android:layout_marginLeft="5dp"

            android:layout_height="wrap_content"
            android:hint="@string/et_plpassword"
            android:inputType="textPassword"
            />



    </LinearLayout>


    <LinearLayout

        android:id="@+id/querenmiam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/passlinearlayout"
        android:layout_marginTop="15dp"


        >

        <TextView
            android:id="@+id/tv_againpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textSize="18sp"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/et_againpassword"
            android:layout_width="160dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_registeredagainpassword"
            android:inputType="textPassword"
            />



    </LinearLayout>



    <LinearLayout

        android:id="@+id/tell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/querenmiam"
        android:layout_marginTop="15dp"


        >

        <TextView
            android:id="@+id/tv_tell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_registeredtell"
            android:textSize="18sp"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/et_tell"
            android:layout_width="160dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_registeredtell"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="11"

            />



    </LinearLayout>

    <LinearLayout

        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tell"
        android:layout_marginTop="15dp"


        >

        <TextView
            android:id="@+id/tv_yanzhanma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_registeredyanzhanma"
            android:textSize="18sp"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/et_yanzhanpaswword"
            android:layout_width="160dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_registeredyanzhanma"
            android:lines="1"

            />


    </LinearLayout>







    <!--android:inputType="textPassword"-->






    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/bt_logf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_registered"


            />

        <!--<Button-->
            <!--android:id="@+id/bt_registered"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/bt_registered"/>-->
        <com.examplechaiqian.py.mytabrapplication.CountDownTimerButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_registeredyanzhanma"
            android:id="@+id/yangzhanmabutton"


            />

    </LinearLayout>






</android.support.constraint.ConstraintLayout>