<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:id="@+id/logconstrain"

    android:orientation="vertical"

    >

    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <TextView

        android:id="@+id/logIntextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="22sp"
        android:textColor="@color/White"

        android:layout_marginTop="120dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        android:gravity="center_horizontal
"
        />

    <LinearLayout

        android:id="@+id/usnamelinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/logIntextView"
        >

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_username"
            android:textSize="18sp"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/et_username"
            android:singleLine="true"
            />

    </LinearLayout>




    <LinearLayout

        android:id="@+id/passlinearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/usnamelinear"
        android:layout_marginTop="15dp"


        >

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textSize="18sp"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="160dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            />



    </LinearLayout>
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <LinearLayout

        android:id="@+id/wangjiemima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/passlinearlayout"

        app:layout_constraintRight_toRightOf="parent"




        >

        <Button



            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_wangjimima"
            android:layout_marginRight="5dp"


            android:background="#00000000"
            />





    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/wangjiemima"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/bt_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_log"


            />

        <Button
            android:id="@+id/bt_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_registered"/>

    </LinearLayout>








</android.support.constraint.ConstraintLayout>